# python-project-lvl2

./: .gitignore  .travis.yml  Makefile  README.md  config.toml  pyproject.toml  setup.cfg
.github/workflows/: hexlet-check.yml  main.yml
DifferencesEvaluator/: evaluator.py
DifferencesEvaluator/scripts/: gendiff.py
differences_evaluator/: __init__.py  evaluator.py  file_parser.py  formaters.py
differences_evaluator/scripts/: gendiff.py
gendiff/: __init__.py  config.py  diff_builder.py  evaluator.py  file_parser.py  formater.py  formaters.py
gendiff/formaters/: __init__.py  json.py  main.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: conftest.py  test_diff.py  test_differences_evaluator.py  test_differences_evaluator_json.py  test_differences_evaluator_yaml.py  test_evaluator.py  test_file_parser.py  test_formaters.py
tests/expects/: generate_diff_plain.txt  generate_diff_stylish.txt
tests/fixtures/: evaluator_content.json  expect.json  file.toml  file_parser_content.json  fixture_content.csv  flat_first.yaml  flat_second.yaml  formaters_content.json  jsons.py  tree_first.json  tree_first.yaml  tree_second.json  tree_second.yaml  wrong.json  wrong.yaml  yamls.py
