[tool.poetry]
name = "DifferencesEvaluator"
version = "0.1.0"
description = ""
authors = ["vcslav-v <vcslav.v@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
gendiff = "DifferencesEvaluator.scripts.gendiff:main"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
